# windowing

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
examples/: basic.rs
examples/web/: Cargo.toml
examples/web/src/: main.rs
src/: event.rs  lib.rs  window.rs
src/platform/: macos.rs  mod.rs  wayland.rs  web.rs  windows.rs
