[package]
name = "windowing"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = { version = "^0.5" }

[target.'cfg(target_os = "linux")'.dependencies]
smithay-client-toolkit = { version = "^0.16", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "^0.43", default-features = false, features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "^0.3", default-features = false, features = ["console", "Document", "Element", "HtmlElement", "HtmlCanvasElement"] }

[dev-dependencies]
tokio = { version = "^1.24", features = ["macros", "rt-multi-thread"] }