[package]
name = "windowing"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = { version = "^0.5", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
smithay-client-toolkit = { version = "^0.16", features = ["dlopen"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "^0.48", default-features = false, features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2", default-features = false }
wasm-bindgen-futures = { version = "^0.4", default-features = false }
web-sys = { version = "^0.3", default-features = false, features = ["console", "Document", "Element", "HtmlElement", "HtmlCanvasElement", "Window"] }
js-sys = { version = "^0.3", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = { version = "^0.3", default-features = false, features = ["std"] }
tokio = { version = "^1.24", features = ["net"] }

[dev-dependencies]
tokio = { version = "^1.24", features = ["rt"] }